# flink.unittest

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINERS.md  README.md  comparator.py  file_readers.py  flink_sql_test.py  linter.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
backends/: base.py  duckdb_backend.py  flink_backend.py
examples/: test_basic.yaml  test_data_files.yaml  test_lint_failures.yaml  test_sql_file.yaml  test_streaming.yaml  test_streaming_patterns.yaml  test_top_patterns.yaml
examples/data/: expected_revenue.parquet  expected_users.avro  orders.csv  orders.parquet
src/flink_unittest/: __init__.py  __main__.py  arrow_types.py  cli.py  comparator.py  file_readers.py  linter.py  models.py
src/flink_unittest/backends/: base.py  duckdb_backend.py  flink_backend.py
src/flink_unittest/examples/: test_data_files.yaml  test_streaming_patterns.yaml
src/flink_unittest/examples/data/: expected_revenue.json  users.avro  users.jsonl
src/flink_unittest/examples/sql/: revenue_by_region.sql
