[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flink-unittest"
version = "0.2.0"
description = "Unit test your Flink SQL with YAML-defined fixtures"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Florian Eiden"}]
keywords = ["flink", "sql", "testing", "unit-test"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
lint = ["sqlglot>=20.0"]
parquet = ["pyarrow>=14.0"]
avro = ["fastavro>=1.9.0"]
all = [
    "sqlglot>=20.0",
    "pyarrow>=14.0",
    "fastavro>=1.9.0",
]

[project.urls]
Repository = "https://github.com/Fleid/flink.unittest"
Issues = "https://github.com/Fleid/flink.unittest/issues"

[project.scripts]
flink-unittest = "flink_unittest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flink_unittest = [
    "examples/*.yaml",
    "examples/*.yml",
    "examples/sql/*.sql",
    "examples/data/*.csv",
    "examples/data/*.json",
    "examples/data/*.jsonl",
    "examples/data/*.parquet",
    "examples/data/*.avro",
]
